# abc_dz1_procedural_approach

./: CMakeLists.txt  Common.cpp  Common.h  Container.cpp  Container.h  Diagonal.cpp  Diagonal.h  Matrix.cpp  Matrix.h  README.md  Rand.cpp  Rand.h  Triangularn.cpp  Triangularn.h  a.out  data.txt  main.cpp  test1.txt  test2.txt  Отчет по заданию.docx  Схема.docx
